<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system">系统</string>
    <string name="mine">我的</string>
    <string name="scanning_m_of_n">扫描中 %1$d/%2$d</string>
    <string name="base">测试</string>
    <string name="uninstall">卸载</string>
    <string name="auto_start">自启动</string>
    <string name="no_root">没有root权限</string>
    <string name="edit">编辑</string>
    <string name="uninstall_master">卸载大师</string>
    <string name="send">发送</string>
    <string name="sender">发件人:</string>
    <string name="valid_email">请在这里输入邮箱地址</string>
    <string name="topic">主题:</string>
    <string name="feedback_topic">AndroidGuide意见反馈</string>
    <string name="describe_problem">请描述您遇到的问题</string>
    <string name="common_point">评分</string>
    <string name="select_fill">选填</string>
    <string name="feedback">意见反馈</string>
    <string name="no_permission">您没有系统权限哦</string>
    <string name="feedback_failed">反馈失败咯，再试试吧</string>
    <string name="please_login_in">please login</string>
    <string name="navigation_drawer_open">开启</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="soft_manager">软件管理</string>
    <string name="hardware_info">硬件信息</string>
    <string name="uninstall_success">卸载成功!</string>
    <string name="system_version">系统版本: Android </string>


    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    <string name="basic_info">基本信息</string>
    <string name="last_launch">上次启动</string>
    <string name="run_time">运行时间</string>
    <string name="network_info">网络信息</string>
    <string name="hard_title">硬件特性</string>
    <string name="processor">处理器</string>
    <string name="size">尺寸</string>
    <string name="weight">重量</string>
    <string name="density">密度</string>
    <string name="battery">电池容量</string>
    <string name="wifi">WIFI</string>
    <string name="back_camera">后置摄像头</string>
    <string name="fore_camera">前置摄像头</string>
    <string name="gyro">三轴陀螺仪</string>
    <string name="has">有</string>
    <string name="direction_sensor">方向传感器</string>
    <string name="distance_sensor">距离传感器</string>
    <string name="light_sensor">光线传感器</string>
    <string name="touchid_sensor">指纹识别传感器</string>
    <string name="barometer">压力传感器</string>
    <string name="bluetooth">蓝牙</string>
    <string name="mobile_net">移动网络</string>
    <string name="has_connected">已连接</string>
    <string name="not_connected">未连接</string>
    <string name="ip_address">IP地址</string>
    <string name="wifi_network">WIFI网络</string>
    <string name="do_has">没有</string>
    <string name="imei">IMEI</string>
    <string name="for_given">还你一个清爽的手机\n企鹅群:587521420</string>
    <string name="clean_garbage">清理垃圾</string>
    <string name="see_detail">查看详情</string>
    <string name="apk_clean">Apk清理</string>
    <string name="big_file">大文件清理</string>
    <string name="memory_clean">手机加速</string>
    <string name="garbage_clean">垃圾清理</string>
    <string name="big_file_clean">大文件清理</string>
    <string name="scanning">正在扫描</string>
    <string name="scan_finish">扫描完成</string>
    <string name="shortvideo">聊天视频</string>
    <string name="garbage_file">垃圾文件</string>
    <string name="not_install_qq">您似乎没有安装QQ啊...</string>
    <string name="recv_files">接收文件</string>
    <string name="app_cache">应用缓存</string>
    <string name="ad_garbage">广告垃圾</string>
    <string name="app_scaned">App扫描完成</string>
    <string name="delete_cache">清除缓存</string>


    <string name="check_update">检查更新</string>
    <string name="remove_ad">去除广告</string>
    <string name="set_theme">设置主题</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="quit">退出登陆</string>

    <string name="close_send">关闭推送</string>
    <string name="send_introduce">偶尔我可能会推段子,你可以关掉</string>
    <string name="comment_introduce">你的鼓励让我做的更好</string>
    <string name="app_introduce">App介绍</string>
    <string name="setting">设置</string>


    <string name="install_info">安装信息</string>
    <string name="version">版本:</string>
    <string name="visit">访问</string>
    <string name="version_title">版本号:</string>
    <string name="copyright">版权:</string>
    <string name="email">developermail1@163.com</string>
    <string name="github_content">https://github.com/HumorSmith</string>
    <string name="gmail_title">Email:</string>
    <string name="github_title">Github:</string>


    <string name="support_ten_yuan">支持一波 | 10元</string>
    <string name="update_knowleage">知识更新</string>
    <string name="upadte_content">不定期更新知识库.共同进步</string>
    <string name="support_money">支持一下|(任意金额均可)</string>
    <string name="broken_notify">切断唤醒</string>
    <string name="permission_manager">权限管理</string>
    <string name="get_permission">获取敏感权限</string>
    <string name="parse_permission_xml">解析permission.xml</string>
    <string name="permission_count">项权限</string>

    <string name="fee">资费</string>
    <string name="privacy">隐私相关</string>
    <string name="setting_about">设置相关</string>
    <string name="no_permission_see">此应用没有权限可以查看</string>


    <string name="log_empty">No logs</string>
    <string name="media_about">多媒体相关</string>
    <string name="empty_file">空文件夹</string>
    <string name="not_use_empty">无用的空文件夹</string>
    <string name="useless_empty_folder">无用的空文件夹</string>
    <string name="cn">cn</string>
    <string name="zh">zh</string>
    <string name="cache_garbage">缓存垃圾</string>
    <string name="empty_file_count">数量:</string>
    <string name="use_less_folder">无用的空文件夹</string>
    <string name="cleaning_app_cache">正在清理app缓存...</string>
    <string name="cleanning_ad_garbage">正在清除广告垃圾</string>
    <string name="cleanning_empty_folder">正在清除空文件夹</string>
    <string name="clean_finished">垃圾清理完毕</string>
    <string name="dont_need_clean">你的手机没有垃圾.不需要清理哦</string>
    <string name="qq_clean">qq专清</string>
    <string name="clean_finish">清理完毕</string>
    <string name="user_head">用戶頭像</string>
    <string name="thumbnails">缩略图片</string>
    <string name="chat_title">聊天图片</string>
    <string name="alipay">支付宝充值</string>
    <string name="icebox">应用冰冻</string>
    <string name="freeze">已经冰冻</string>


    <!-- 内存详细页面 -->
    <string name="external_memory_title">存储信息</string>
    <string name="internal_memory_title">内存</string>
    <string name="external_space_title">存储空间</string>
    <string name="external_space_detail_title">存储空间可分为: </string>
    <string name="external_space_system">系统</string>
    <string name="external_space_detail">空间详情</string>
    <string name="external_space_app_title">应用数据</string>
    <string name="external_space_media_title">图片、视频</string>
    <string name="external_space_other_title">其他</string>
    <string name="external_space_aval_title">可用空间</string>
    <string name="need_root">查看权限需要root权限哦.</string>
    <string name="clear_text">本次共清理:</string>
    <string name="pay_des">感谢您使用本应用,本软件为无广告免费应用,付费可开通高级功能，包括但不限于:  \n\t1.切断唤醒  \n\t2.冰冻应用 \n\t3.大文件扫描阈值设置 \n\t4.清理更顽固垃圾</string>
    <string name="support">开通</string>
    <string name="use_alipay">使用支付宝</string>
    <string name="try_end">解锁高级功能</string>
    <string name="price">4.00</string>
    <string name="exit_str">再按一次退出app</string>
    <string name="authority">作者:</string>
    <string name="baihua">白桦</string>
    <string name="qqgroup">qq群</string>
    <string name="group_name">587521420</string>
    <string name="thanks">鸣谢</string>
    <string name="thanks_names">卡基猫.老曾.灰灰.假面小哥哥</string>
    <string name="device_id_request">充值需要获取设备id做标记.请授权哦</string>
    <string name="loading">正在加载数据...</string>
    <string name="cut_wakeup">切断唤醒</string>
    <string name="base_function">基础功能</string>
    <string name="high_function">高级功能</string>
    <string name="component_manager">组件管理</string>
    <string name="ui_component">界面组件</string>
    <string name="receiver">广播接收器</string>
    <string name="service">服务</string>
    <string name="content_provider">内容提供者</string>
    <string name="activity">界面</string>
    <string name="receiver_suffix">个广播</string>
    <string name="ui_suffix">个界面</string>
    <string name="activity_suffix">个界面</string>
    <string name="content_provider_suffix">个内容提供者</string>
    <string name="service_suffix">个服务</string>
    <string name="no_content">没有内容可以查看哦</string>
    <string name="action">事件:\n</string>
    <string name="scan_wakeup_path">正在扫描唤醒路径</string>
    <string name="action_listen">事件监听</string>
    <string name="push_receiver">互相唤醒</string>
    <string name="action_listener">个应用被唤醒</string>
    <string name="loading_data">正在加载数据,请稍等...</string>
    <string name="icebox_des">把App放入冰箱后,App无法在后台偷跑流量、启动，甚至连桌面都不可见，避免消耗手机资源，移出冰箱之后一切正常使用</string>
    <string name="icebox_title">冰箱说明</string>
    <string name="ok">好的</string>
    <string name="title">标题</string>
    <string name="wakeup_des">切断唤醒是可以禁用任意组件,防止APP被其他App事件唤醒、全家桶一样的不道德唤醒，能有效节省手机电量，延长续航时间(使用得当，最少延长一天)</string>
    <string name="component_manager_des">组件管理适用于，你需要使用这个app，但是这个app被流氓唤醒，你只想阻止这个流氓，不想冰冻app，就可以禁用与流氓相关的组件，自由度较大</string>
    <string name="uninstall_failed">卸载失败</string>
    <string name="uninstalling">正在卸载...</string>


    <string name="app_not_install_tip">未安装</string>
    <string name="app_install_version_hight_tip">新版本</string>
    <string name="app_install_version_low_tip">低版本</string>
    <string name="backup_failed">备份失败</string>
    <string name="back_success">备份成功</string>
    <string name="backup">回收站</string>
    <string name="restore">还原</string>
    <string name="restore_sucess">还原成功</string>
    <string name="restore_failed">还原失败</string>
    <string name="has_disable">已经禁止的组件</string>
    <string name="operation">高级操作</string>
    <string name="component_not_exist">组件不存在</string>
    <string name="begin_scan">开始扫描</string>
    <string name="big_file_maxsize">最大文件阀</string>
    <string name="cannot_null">不能为空哦</string>
    <string name="not_number">输入不是数字.不要想搞我..</string>
    <string name="moving">正在移动...</string>
    <string name="move_success">移动成功.请务必重启生效</string>
    <string name="remove_failed">移动失败 errorCode=</string>
    <string name="restoreing">正在还原,请耐心等待...</string>
    <string name="delete_backup">删除缓存</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="cleaning">正在清空回收站,请稍等...</string>
    <string name="confirm_clean_tip">确定要清空回收站吗?</string>
    <string name="tip">提示</string>
    <string name="not_finish">应用还未加载完全，请稍后</string>
    <string name="app_info_null">应用信息为空</string>
    <string name="wakeup_path_null">唤醒路径信息为空</string>
    <string name="back_failed_continue_uninstall">备份失败，是否继续卸载</string>
    <string name="all_disable">全部禁止</string>
    <string name="all_enable">全部允许</string>
</resources>
