<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_test"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="cn.ifreedomer.com.softmanager.activity.TestActivity">


    <Button
        android:id="@+id/btn_sdcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="扫描SDCard耗时"/>

    <Button
        android:id="@+id/btn_delete_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_cache"/>

    <Button
        android:id="@+id/btn_get_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_permission"/>

    <Button
        android:id="@+id/btn_parse_permission_xml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parse_permission_xml"/>


    <Button
        android:id="@+id/btn_recharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alipay"/>

</LinearLayout>
