<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="@dimen/dp20">

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_toRightOf="@+id/iv_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_end"
                android:textColor="@color/blackTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_alipay"/>
        </LinearLayout>

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@mipmap/rmb"
            android:text="@string/price"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_title"
        android:text="@string/pay_des"/>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_des"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/colorAccent"
        android:text="@string/support"
        android:textColor="@color/whiteColor"/>

    <Button

        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_pay"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/payBtnColor"
        android:text="下次再说"
        android:textColor="@color/whiteColor"/>
</RelativeLayout>