<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/dp15"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp150">


            <ImageView
                android:id="@+id/icon_iv"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_centerInParent="true"
                android:src="@mipmap/clean"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/app_name"/>

        </RelativeLayout>

        <TextView
            style="@style/hintColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install_info"/>

        <LinearLayout
            android:id="@+id/install_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <include layout="@layout/devider"></include>

        <TextView
            style="@style/hintColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/visit"/>

        <LinearLayout
            android:id="@+id/visit_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/support_money"/>
    </LinearLayout>
</RelativeLayout>
